			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

13-Feb-2003
~~~~~~~~~~~
Updated Spanish translation (Marcelo Ramos).

12-Feb-2003
~~~~~~~~~~~
Fixed some spelling errors (Marcelo Ramos).
Select the current style by default when opening the Set Backdrop box
(reported by Marcelo Ramos).
Fix problems with pinboard drawing of semi-transparent icons (fixed for GTK+-2.2 only).

11-Feb-2003
~~~~~~~~~~~
Merged Set Run Action, Set Icon and Set Backdrop dropboxes into a single
Ultimate DropBox widget, and made all three interfaces much nicer.
Dragging to the Home and Up toolbar tools now supports the menu-on-drag
option (reported by Laurent Moussault).
Allow changing the pinboard style without having to drag the image back in
(requested by Jesse Wagner).
Remove button style from iconified windows. Use a semi-transparent border
instead. The actual effect is flexible; perhaps someone with artistic
talent can do something better?
Double-buffer small pinboard updates.
Updated Spanish translation (Marcelo Ramos).

10-Feb-2003
~~~~~~~~~~~
Option to turn off column headings in List View (Adam Sampson).
Panel auto-raising also works during drag-and-drop.
Bugfix: Installing to /usr put the MIME files in the wrong place (reported
	by Albert Wagner).

09-Feb-2003
~~~~~~~~~~~
Allow dragging to a selected directory as long as it's not the source of the
drag.
If an error occurs opening a directory then don't report it in an error box if
a drag-and-drop operation is in progress.
Keep the title up-to-date for iconified windows.
Option to show menu on button-1 drags instead of copying.
Aborting an action window tries to kill all child processes, not just the
immediate child, and doesn't close the window until it has actually stopped.
Symlinks to mount points now work (reported by Daniele Peri).
Include textual description of types in various places (Stephen Watson).
Allow dragging directories to bookmarks edit window or toolbar icon, with