@@ -26,8 +26,6 @@ Don't redraw the whole pinboard on iconfiy/uniconify.
 
 Winking doesn't work in List view.
 
-Alpha blended pinboard icons don't get clipped correctly.
-
 			FEATURES FOR 1.3
 
 Sorting by group/user should use name (Bernard Jungen).
