@@ -5,13 +5,15 @@
 13-Feb-2003
 ~~~~~~~~~~~
 Updated Spanish translation (Marcelo Ramos).
+Alpha blended pinboard icons now get clipped correctly even with GTK+-2.0).
 
 12-Feb-2003
 ~~~~~~~~~~~
 Fixed some spelling errors (Marcelo Ramos).
 Select the current style by default when opening the Set Backdrop box
 (reported by Marcelo Ramos).
-Fix problems with pinboard drawing of semi-transparent icons (fixed for GTK+-2.2 only).
+Fix problems with pinboard drawing of semi-transparent icons (fixed for
+GTK+-2.2 only).
 
 11-Feb-2003
 ~~~~~~~~~~~
